--- a/redux-blog/package.json
+++ b/redux-blog/package.json
@@ -8,10 +8,10 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
-    "found": "^0.2.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-redux": "^5.0.3",
+    "react-router": "^3.0.3",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-promise": "^0.5.3"
